# c-_bistatic_sar

./: .gitignore  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  clean_build.bat  compile.bat  example_colored_logs.cpp  gs_test_script.cpp  gs_test_script_fixed.cpp  proc_test_script.cpp  visualize_3D_matrix.py  visualize_binary_data.py
assets/: DEM_1x1km_Res30m_Lat-13_1631_Lon-72_5450.tif  DEM_1x1km_Res30m_Lat-3_6160_Lon-80_4552.tif  DEM_5x3km_Res30m_Lat-13_1631_Lon-72_5450.tif
include/: binary_reader.h  color_logger.h  crear_grid.h  csv_reader.h  data_export.h  fft_utils.h  funcao_espiral.h  interpolation.h  load_dem.h  plot_escenario.h  project_paths.h  radar_init.h  radar_params.h  raw_data_processing.h  trajectory_generator.h
relatorio/: README.md  artigo_cientifico_radar.tex  artigo_cientifico_radar_fixed.tex  relatorio_otimizacoes_radar.tex
src/: binary_reader.cpp  crear_grid.cpp  csv_reader.cpp  data_export.cpp  fft_utils.cpp  funcao_espiral.cpp  interpolation.cpp  load_dem.cpp  load_dem_simple.cpp  matrix_reader.cpp  matrix_reader.h  plot_escenario.cpp  project_paths.cpp  radar_init.cpp  raw_data_processing.cpp  trajectory_generator.cpp
